fixed price card spacing

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -32,6 +32,10 @@ h3 {
   margin: 1em auto;
 }
 
+ul + p {
+    margin-top: 1em;
+}
+
 
 address {
     h4,
